--- a/gb/23/7/11/n14032478.md
+++ b/gb/23/7/11/n14032478.md
@@ -3,56 +3,55 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>2023卡尔加里牛仔节：篷车竞技百年</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/07/id14032479-1_IMG_20230709_120448999_HDR-600x400.jpg" />
-<h6>四轮篷车竞技100周年壁画描绘了1923年首届篷车竞技的情景。（林采枫/大纪元）
-</h6>
+<h6>四轮篷车竞技100周年壁画描绘了1923年首届篷车竞技的情景。（林采枫/大纪元）</h6>
 <hr>
 	<p>【大纪元2023年07月12日讯】2023卡尔加里牛仔节，迎来两个百年纪念：篷车竞技100年，煎饼早餐100年。两者携手同行，共历风雨。</p>
 <p>牛仔公园“历史101之旅”带领游客重温卡尔加里牛仔节过去一个多世纪的风华。</p>
-<figure id="attachment_14032480" aria-describedby="caption-attachment-14032480" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14032480-2_IMG_20230709_125504934.jpg"><img decoding="async" class="size-large wp-image-14032480" src="https://i.epochtimes.com/assets/uploads/2023/07/id14032480-2_IMG_20230709_125504934-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14032480" class="wp-caption-text">牛仔公园举办“四轮篷车竞技百年”展览。（林采枫/大纪元）</figcaption></figure>
-<figure id="attachment_14032481" aria-describedby="caption-attachment-14032481" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14032481-3_IMG_20230709_125214444.jpg"><img decoding="async" class="size-large wp-image-14032481" src="https://i.epochtimes.com/assets/uploads/2023/07/id14032481-3_IMG_20230709_125214444-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14032481" class="wp-caption-text">牛仔驾驶的四轮篷车。（林采枫/大纪元）</figcaption></figure>
+<figure id="attachment_14032480" aria-describedby="caption-attachment-14032480" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14032480-2_IMG_20230709_125504934.jpg" rel="nofollow"><img decoding="async" class="size-large wp-image-14032480" src="https://i.epochtimes.com/assets/uploads/2023/07/id14032480-2_IMG_20230709_125504934-600x450.jpg" alt="" width="600" b="450"></a><figcaption id="caption-attachment-14032480" class="wp-caption-text">牛仔公园举办“四轮篷车竞技百年”展览。（林采枫/大纪元）</figcaption></figure>
+<figure id="attachment_14032481" aria-describedby="caption-attachment-14032481" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14032481-3_IMG_20230709_125214444.jpg" rel="nofollow"><img decoding="async" class="size-large wp-image-14032481" src="https://i.epochtimes.com/assets/uploads/2023/07/id14032481-3_IMG_20230709_125214444-600x450.jpg" alt="" width="600" b="450"></a><figcaption id="caption-attachment-14032481" class="wp-caption-text">牛仔驾驶的四轮篷车。（林采枫/大纪元）</figcaption></figure>
 <p>1912年，游历四方的美国牛仔盖伊?威迪克（Guy Weadick）在卡尔加里组织了第一个牛仔竞技表演和节日，庆祝“狂野西部”传统，称为“牛仔节”。资金出自四个人，每人$25,000，此即现今牛仔公园里“Big Four”大楼名字的来源。</p>
 <p>之后，停顿了7年，因为当时人们觉得“牛仔已死”，何必再组织什么劳什子的牛仔节？</p>
 <p>然而历史证明，他们错了。时至今日，牛仔精神依旧鲜活在西部人民的血液里、灵魂中。</p>
 <p>1919年，威迪克重返卡尔加里，为庆祝加拿大士兵从第一次世界大战中归来，组织了“伟大胜利牛仔节”。</p>
 <p>1923年，牛仔节与农业展览合并，成为延续至今的形式。也是在那年，威迪克将四轮篷车纳入比赛项目，篷车竞技首次亮相，艳惊四座。放眼全球，卡尔加里牛仔节并非举办牛仔竞技的唯一节日，但令它脱颖而出的，正是独一无二的大规模篷车竞技。</p>
-<figure id="attachment_14032482" aria-describedby="caption-attachment-14032482" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14032482-4_IMG_20230709_125130744.jpg"><img decoding="async" class="size-large wp-image-14032482" src="https://i.epochtimes.com/assets/uploads/2023/07/id14032482-4_IMG_20230709_125130744-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14032482" class="wp-caption-text">卡尔加里牛仔节创始人威迪克于1923年将四轮篷车纳入比赛项目。（林采枫/大纪元）</figcaption></figure>
+<figure id="attachment_14032482" aria-describedby="caption-attachment-14032482" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14032482-4_IMG_20230709_125130744.jpg" rel="nofollow"><img decoding="async" class="size-large wp-image-14032482" src="https://i.epochtimes.com/assets/uploads/2023/07/id14032482-4_IMG_20230709_125130744-600x450.jpg" alt="" width="600" b="450"></a><figcaption id="caption-attachment-14032482" class="wp-caption-text">卡尔加里牛仔节创始人威迪克于1923年将四轮篷车纳入比赛项目。（林采枫/大纪元）</figcaption></figure>
 <p>杰克?莫顿（Jack Morton ）是参加首届篷车比赛的选手之一。他把篷车停在市中心的斯蒂芬大道上，然后在车后面，和他的两只宠物獾一起，供应煎饼早餐。顺便提一下，四轮篷车的英文叫作Chuckwagon，chuck是食物，wagon是马车，两者合体，其实就是食物餐车，因此莫顿用篷车做煎饼，也就不难理解。</p>
 <p>从此，煎饼早餐这一传统成为西部好客、慷慨和社区精神的象征。</p>
-<figure id="attachment_14032483" aria-describedby="caption-attachment-14032483" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14032483-5_IMG_20230709_125045188_modified.jpg"><img decoding="async" class="size-large wp-image-14032483" src="https://i.epochtimes.com/assets/uploads/2023/07/id14032483-5_IMG_20230709_125045188_modified-600x462.jpg" alt="" width="600" b="462" /></a><figcaption id="caption-attachment-14032483" class="wp-caption-text">1923年，莫顿在他的篷车后面供应了牛仔节的第一顿煎饼早餐。（林采枫/大纪元）</figcaption></figure>
+<figure id="attachment_14032483" aria-describedby="caption-attachment-14032483" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14032483-5_IMG_20230709_125045188_modified.jpg" rel="nofollow"><img decoding="async" class="size-large wp-image-14032483" src="https://i.epochtimes.com/assets/uploads/2023/07/id14032483-5_IMG_20230709_125045188_modified-600x462.jpg" alt="" width="600" b="462"></a><figcaption id="caption-attachment-14032483" class="wp-caption-text">1923年，莫顿在他的篷车后面供应了牛仔节的第一顿煎饼早餐。（林采枫/大纪元）</figcaption></figure>
 <p>为纪念四轮篷车竞技100周年，牛仔公园“Nutrien西部活动中心”外墙上创作了一幅壁画《尘埃中的历史》（History in the Dust），描绘了1923年首届篷车竞技的情景：三名牛仔驾驶着三辆篷车风驰电掣，呼啸而来。画面右上方也有一辆篷车，但刻意模糊，反映了百年历史的变迁：篷车竞技后来发展为四车同场，但出于安全考量，2021年开始仍改为最初始的三辆，尽管当年因疫情取消了篷车比赛。</p>
-<figure id="attachment_14032484" aria-describedby="caption-attachment-14032484" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14032484-6_IMG_20230709_134119239_HDR.jpg"><img decoding="async" class="size-large wp-image-14032484" src="https://i.epochtimes.com/assets/uploads/2023/07/id14032484-6_IMG_20230709_134119239_HDR-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14032484" class="wp-caption-text">《尘埃中的历史》壁画。（林采枫/大纪元）</figcaption></figure>
+<figure id="attachment_14032484" aria-describedby="caption-attachment-14032484" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14032484-6_IMG_20230709_134119239_HDR.jpg" rel="nofollow"><img decoding="async" class="size-large wp-image-14032484" src="https://i.epochtimes.com/assets/uploads/2023/07/id14032484-6_IMG_20230709_134119239_HDR-600x450.jpg" alt="" width="600" b="450"></a><figcaption id="caption-attachment-14032484" class="wp-caption-text">《尘埃中的历史》壁画。（林采枫/大纪元）</figcaption></figure>
 <p>篷车竞赛选手由四匹马和一位牛仔组成，参赛的每匹马都得到牛仔精心的照料。比起老婆孩子，牛仔对马匹更为宠爱有加，呵护备至。牛仔们的生活哲学是：马儿至上（horses come first）。马儿吃了，牛仔一家才吃；马儿洗完澡，牛仔一家才洗；马儿睡了，牛仔一家才睡。</p>
 <p>因为，没有马，就没有牛仔的昨日、今日和明日。</p>
-<figure id="attachment_14032485" aria-describedby="caption-attachment-14032485" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14032485-7_IMG_20230709_143713886_HDR.jpg"><img decoding="async" class="size-large wp-image-14032485" src="https://i.epochtimes.com/assets/uploads/2023/07/id14032485-7_IMG_20230709_143713886_HDR-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14032485" class="wp-caption-text">牛仔公园中的“牛仔与马”雕塑。（林采枫/大纪元）</figcaption></figure>
+<figure id="attachment_14032485" aria-describedby="caption-attachment-14032485" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14032485-7_IMG_20230709_143713886_HDR.jpg" rel="nofollow"><img decoding="async" class="size-large wp-image-14032485" src="https://i.epochtimes.com/assets/uploads/2023/07/id14032485-7_IMG_20230709_143713886_HDR-600x450.jpg" alt="" width="600" b="450"></a><figcaption id="caption-attachment-14032485" class="wp-caption-text">牛仔公园中的“牛仔与马”雕塑。（林采枫/大纪元）</figcaption></figure>
 <p>责任编辑：齐守善</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/7/5/n13773690.md#1">2022卡尔加里牛仔节全面回归</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/7/9/n13776921.md#1">卡尔加里牛仔节大游行 观众赞法轮大法好</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/7/10/n13777904.md#1">卡尔加里牛仔节恢复疫前规模 政客参加争取民众支持</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/6/30/n14025852.md#1">2023卡尔加里牛仔节 后疫情时代的西部狂欢</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640659.md#1">罗晋被传婚变之际 经纪人发布罗父离世噩耗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640721.md#1">三退声明精选（2025/11/21）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640342.md#1">英申请永居资格年限延至10年 港人BNO年限不变</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640341.md#1">郑州多名男子开越野车撞开烟酒店大门抢劫</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/9/25/n11546701.md#1" target="_blank">林辉：中共70年来杀了多少人？</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/10/12/n8391689.md#1" target="_blank">一个江湖亡命汉的不绝之命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/30/n10099159.md#1" target="_blank">郑兢业：人吃与吃人（六）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/12/8/27/n3668851.md#1" target="_blank">吕溪珍：对大连警察的劝善信</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/4/30/n14237654.md#1">“牛鸣地裂”一场大地震冥冥中竟安排了三年</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/7/n14526494.md#1">怎样当个惹人爱的人？教你一个秘诀</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/15/n14531783.md#1">浮生行吟：想想“长跑”这件事</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/20/10/3/n12449160.md#1">明代茶道别开生面妙在何处 后人津津乐此道</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/6/n14525768.md#1">【品读宋词】花胜去年红 离恨中见旷达</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/17/n14533389.md#1">【直播】美参院听证：审议世界反兴奋剂机构</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533647.md#1">【马克时空】以掌握制空权 伊导弹反击不可持续</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/17/n14533382.md#1">【直播】布鲁斯主持国务院简报会（6/17）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/15/n14531890.md#1">中共为何不敢让亏损的“僵尸企业”倒闭</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/15/n14531586.md#1">美双管齐下 专家：中共藉稀土威胁适得其反</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/16/n14532291.md#1">中国的打工人吃“人用饲料” 引爆争议</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/14/n14531361.md#1">不认识新晋演员辛云来 黄晓明获对方搭档救火</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/14/n14531385.md#1">偕刘嘉玲看爱马仕秀 梁朝伟社恐状态引热议</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/15/n14531440.md#1">43岁大陆知名主持人金昀离世 好友曝死因</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/16/n14532625.md#1">被传嫁豪门每年有2亿零用钱 黄圣依首曝真相</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/16/n14532113.md#1">林依晨顺利产下第二胎 夫全程陪产迎接儿子</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/15/n14531633.md#1">专家：“我一天吃什么”影片暗藏5大危害</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/16/n14532214.md#1">爱美人士看过来 用这一物可以让你更年轻</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/17/n14532974.md#1">研究：食用富含类黄酮食物有助于延年益寿</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/11/n14529262.md#1">选择植物蛋白还是动物蛋白？取决于年龄</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/13/n14530781.md#1">被忽视的骨质疏松 通过饮食守护你的骨健康</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647568.md#1">执子之手 不离不弃 一对美国夫妻的爱情传奇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645924.md#1">王九龄的《题旅店》：半梦半醒思乡国</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652088.md#1">【直播】众议院民主党领袖杰弗里斯举行记者会</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652090.md#1">【十字路口】防疫或布疫？深夜无人机洒怪液</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651956.md#1">【直播】听证会：保护儿童免受网络犯罪分子侵害</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650041.md#1">分析：北京“稀土武器”效力正快速下降</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650517.md#1">相声演员郭德纲表演《艺高人胆小》遭约谈</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650551.md#1">日军机遭中共歼-15雷达照射 高市早苗回应</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650176.md#1">为捧儿子向佐亏数亿 向华强：上天给我的教训</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650354.md#1">Netflix若收购华纳兄弟 将拥有9个系列影视</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650211.md#1">《阿凡达3》香港撤档 片名后缀因敏感字遭删</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650198.md#1">港星黄日华宣布退圈 告别45年演艺生涯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650330.md#1">为什么飞机客舱的窗户是圆形的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651688.md#1">如何预防车窗起雾？让Toyota告诉你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651622.md#1">为何在天气寒冷时会手脚冰冷？如何改善？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/7/11/n14032478.htm">2023卡尔加里牛仔节：篷车竞技百年</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/7/11/n14032478.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
